--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,12 +10,16 @@
     <string name="wind">风向风力</string>
     <string name="UV_index">紫外线指数</string>
     <string name="dressing_index">穿衣指数</string>
-    
+    <string name="exercise_index">锻炼指数</string>
     
     
     
     
     <string name="forecast">预报</string>
+
+
+
+    <string name="action_settings">Settings</string>
     
 
 </resources>
