--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CoolWeather</string>
+    <string name="app_name">简洁天气</string>
     <string name="text_city">北京</string>
     <string name="today">今天</string>
     <string name="pm">PM2.5</string>
